; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_arm_cs.c_decode_shift.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_arm_cs.c_decode_shift.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@decode_shift.E_OP_SR = internal global i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i32 0, i32 0), align 8
@.str = private unnamed_addr constant [3 x i8] c">>\00", align 1
@decode_shift.E_OP_SL = internal global i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i32 0, i32 0), align 8
@.str.1 = private unnamed_addr constant [3 x i8] c"<<\00", align 1
@decode_shift.E_OP_RR = internal global i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), align 8
@.str.2 = private unnamed_addr constant [4 x i8] c">>>\00", align 1
@decode_shift.E_OP_ASR = internal global i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i32 0, i32 0), align 8
@.str.3 = private unnamed_addr constant [5 x i8] c">>>>\00", align 1
@decode_shift.E_OP_VOID = internal global i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i32 0, i32 0), align 8
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @decode_shift to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @decode_shift(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 137, label %5
    i32 136, label %5
    i32 133, label %7
    i32 132, label %7
    i32 135, label %9
    i32 134, label %9
    i32 131, label %11
    i32 129, label %11
    i32 130, label %11
    i32 128, label %11
  ]

5:                                                ; preds = %1, %1
  %6 = load i8*, i8** @decode_shift.E_OP_ASR, align 8
  store i8* %6, i8** %2, align 8
  br label %16

7:                                                ; preds = %1, %1
  %8 = load i8*, i8** @decode_shift.E_OP_SR, align 8
  store i8* %8, i8** %2, align 8
  br label %16

9:                                                ; preds = %1, %1
  %10 = load i8*, i8** @decode_shift.E_OP_SL, align 8
  store i8* %10, i8** %2, align 8
  br label %16

11:                                               ; preds = %1, %1, %1, %1
  %12 = load i8*, i8** @decode_shift.E_OP_RR, align 8
  store i8* %12, i8** %2, align 8
  br label %16

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %13
  %15 = load i8*, i8** @decode_shift.E_OP_VOID, align 8
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %14, %11, %9, %7, %5
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
